# rvec

./: Cargo.toml  README.md  bench.py  pyproject.toml  test.ipynb  test.py
python/rvec/: __init__.py
rvec/: __init__.py  wrappers.py
src/: lib.rs  math_methods.rs  rbool.rs  rfloat.rs  rint.rs  rstring.rs  rvecdata.rs  string_methods.rs  vec_comparisons.rs  vec_data.rs  vec_index.rs  vec_logic.rs  vec_operations.rs  vec_utils.rs
src/types/: bool.rs  float.rs  integer.rs  mod.rs  string.rs
src/utils/: mod.rs
workflows/: CI.yml
