[package]
name = "rvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rvec"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.15"
pyo3 = { version = "0.18", features = ["extension-module"] }
round = "0.1.2"
